# rusterizer_3d

./: .gitmodules  3dtest.asc  3dtest_layer0.asc  3dtest_layer0.asc.aux.xml  3dtest_layer1.asc  3dtest_layer1.asc.aux.xml  3dtest_layer2.asc  3dtest_layer2.asc.aux.xml  3dtest_layer3.asc  3dtest_layer3.asc.aux.xml  3dtest_layer4.asc  3dtest_layer4.asc.aux.xml  3dtest_layer5.asc  3dtest_layer5.asc.aux.xml  3dtest_layer6.asc  3dtest_layer6.asc.aux.xml  3dtest_layer7.asc  3dtest_layer7.asc.aux.xml  Cargo.toml  README.md
output/: 3dtest.asc  3dtest_layer1.asc.aux.xml  bk.asc  objtest.asc
src/: lib.rs  main.rs
