[package]
name = "rusterizer_3d"
description = "Convert 3D geometry (Wavefront OBJ format) into raster layers for Python."
version = "0.1.1"
edition = "2024"

[dependencies]
ndarray   = "0.15.0"
geo       = "0.23.0"
rayon     = "1.5.3"
indicatif = "0.17.2"
tobj      = { version = "3.2.4", features = ["use_f64"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ordered-float = "5.0.0"

[lib]
crate-type = ["cdylib"]
